--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -178,6 +178,26 @@ models:
                   clearbit_companies_table: contacts_companies
                   geolite_city_table: company_website.geolite_city_bq_b2b
                   tags: ["clearbit", "crm","enrichment"]
+          stg_stripe_subscriptions:
+              vars:
+                  id-prefix: stripe-
+                  etl: segment
+                  segment_schema: stripe
+                  segment_customers_table: customers
+                  segment_accounts_table: accounts
+                  segment_cards_table: cards
+                  segment_coupons_table: coupons
+                  segment_discounts_table: discounts
+                  segment_invoices_table: invoices
+                  segment_plans_table: plans
+                  segment_products_table: products
+                  segment_subscriptions_table: subscriptions
+                  segment_balance_transactions_table: balance_transactions
+                  segment_charges_table: charges
+                  segment_events_table: events
+                  segment_payout_transactions_table: payout_transactions
+                  segment_payouts_table: payouts
+                  tags: ["stripe", "payments","finance"]
 # integration layer settings
       integration:
           materialized: view
@@ -201,6 +221,7 @@ models:
       enable_asana_projects_source:        true
       enable_jira_projects_source:         true
       enable_stripe_payments_source:       true
+      enable_stripe_subscriptions_source:  false
       enable_xero_accounting_source:       true
       enable_mailchimp_email_source:       true
       enable_segment_events_source:        true
