added client events fact

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -241,6 +241,7 @@ models:
       enable_marketing_warehouse:   true
       enable_ads_warehouse:         true
       enable_product_warehouse:     true
+      enable_subscriptions_warehouse:     false
 
 
 
