--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: fishtown-analytics/dbt_utils
-    version: 0.3.0
+ - package: fishtown-analytics/dbt_utils
+   version: [">=0.4.0", "<0.6.0"]
