--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -179,11 +179,13 @@ vars:
   stg_stripe_payments_stitch_charges_table: charges
   stg_stripe_payments_stitch_events_table: events
   stg_stripe_payments_stitch_payout_transactions_table: payout_transactions
-  stitch_payouts_table: payouts
+  stg_stripe_payments_stitch_payouts_table: payouts
+  stg_stripe_payments_stitch_charges_table: charges
   stg_xero_accounting_id-prefix: xero-
   stg_xero_accounting_etl: stitch
   stg_xero_accounting_stitch_schema: xero
   stg_xero_accounting_stitch_accounts_table: accounts
+  stg_xero_accounting_stitch_payments_table: payments
   stg_xero_accounting_stitch_categories_table: tracking_categories
   stg_xero_accounting_stitch_bank_transactions_table: bank_transactions
   stg_xero_accounting_stitch_contacts_table: contacts
