back-ported sw_client content into project

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,7 +33,7 @@ models:
       integration:
           materialized: view
           schema: staging
-              
+
 # warehouse layer settings
       warehouse:
           materialized: table
@@ -64,16 +64,16 @@ vars:
   enable_custom_source_2:              false
   enable_mixpanel_events_source:       true
   enable_clearbit_enrichment_source:   true
-  contacts_enrichment: true
-  companies_enrichment: true
+  contacts_enrichment:                 true
+  companies_enrichment:                true
 
-  enable_crm_warehouse:         true
-  enable_finance_warehouse:     true
-  enable_projects_warehouse:    true
-  enable_marketing_warehouse:   true
-  enable_ads_warehouse:         true
-  enable_product_warehouse:     true
-  enable_subscriptions_warehouse:     false
+  enable_crm_warehouse:                true
+  enable_finance_warehouse:            true
+  enable_projects_warehouse:           true
+  enable_marketing_warehouse:          true
+  enable_ads_warehouse:                true
+  enable_product_warehouse:            true
+  enable_subscriptions_warehouse:      false
 
   stg_asana_projects_id-prefix: asana-
   stg_asana_projects_etl: stitch
@@ -83,6 +83,7 @@ vars:
   stg_asana_projects_stitch_projects_table: projects
   stg_asana_projects_stitch_tasks_table: tasks
   stg_asana_projects_stitch_users_table: users
+
   stg_facebook_ads_id-prefix: fbads-
   stg_facebook_ads_etl: segment
   stg_facebook_ads_stitch_schema: stitch_facebook_ads
@@ -95,6 +96,7 @@ vars:
   stg_facebook_ads_segment_ad_groups_table: ad_sets
   stg_facebook_ads_segment_ads_table: ads
   stg_facebook_ads_segment_campaigns_table: campaigns
+
   stg_google_ads_id-prefix: gads-
   stg_google_ads_etl: segment
   stg_google_ads_stitch_schema: stitch_google_ads
@@ -105,6 +107,12 @@ vars:
   stg_google_ads_segment_ad_groups_table: ad_groups
   stg_google_ads_segment_ads_table: ads
   stg_google_ads_segment_campaigns_table: campaigns
+
+  stg_baremetrics_analytics_id-prefix: baremetrics-
+  stg_baremetrics_analytics_etl: segment
+  stg_baremetrics_analytics_segment_schema: baremetrics
+  stg_baremetrics_analytics_segment_plan_breakdown_table: plan_breakdown
+
   stg_harvest_projects_id-prefix: harvest-
   stg_harvest_projects_etl: stitch
   stg_harvest_projects_stitch_schema: rittman_analytics
@@ -121,6 +129,7 @@ vars:
   stg_harvest_projects_stitch_user_projects_table: user_projects
   stg_harvest_projects_stitch_user_project_tasks_table: user_project_tasks
   stg_harvest_projects_stitch_expenses_table: expenses
+
   stg_hubspot_crm_id-prefix: hubspot-
   stg_hubspot_crm_stitch_schema: stitch_hubspot
   stg_hubspot_crm_fivetran_schema: fivetran_hubspot_euwest2
@@ -139,12 +148,14 @@ vars:
   stg_hubspot_crm_fivetran_pipeline_table: pipeline
   stg_hubspot_crm_fivetran_property_history_table: property_history
   stg_hubspot_crm_fivetran_deal_company_table: deal_company
+
   stg_intercom_messaging_id-prefix: intercom-
   stg_intercom_messaging_etl: stitch
   stg_intercom_messaging_stitch_schema: stitch_intercom
   stg_intercom_messaging_stitch_contacts_table: contacts
   stg_intercom_messaging_stitch_conversations_table: conversations
   stg_intercom_messaging_tags: ["intercom", "messaging"]
+
   stg_jira_projects_id-prefix: jira-
   stg_jira_projects_etl: stitch
   stg_jira_projects_stitch_schema: stitch_jira2
@@ -154,6 +165,7 @@ vars:
   stg_jira_projects_stitch_project_categories_table: project_categories
   stg_jira_projects_stitch_issues_table: issues
   stg_jira_projects_stitch_users_table: users
+
   stg_mailchimp_email_id-prefix: mailchimp-
   stg_mailchimp_email_etl: stitch
   stg_mailchimp_email_stitch_schema: stitch_mailchimp
@@ -161,18 +173,21 @@ vars:
   stg_mailchimp_email_stitch_reports_email_activity_table: reports_email_activity
   stg_mailchimp_email_stitch_lists_table: lists
   stg_mailchimp_email_stitch_campaigns_table: campaigns
+
   stg_mixpanel_events_id-prefix: mixpanel-
   stg_mixpanel_events_stitch_schema: mixpanel_stitch
   stg_mixpanel_events_fivetran_schema: fivetran_mixpanel
   stg_mixpanel_events_etl: fivetran
   stg_mixpanel_events_fivetran_event_table: event
   stg_mixpanel_events_stitch_export_table: export
+
   stg_segment_events_id-prefix: segment-
   stg_segment_events_etl: segment
   stg_segment_events_segment_schema: company_website
   stg_segment_events_segment_tracks_table: tracks
   stg_segment_events_segment_pages_table: pages
   stg_stripe_payments_id-prefix: stripe-
+
   stg_stripe_payments_etl: stitch
   stg_stripe_payments_stitch_schema: stitch_stripe
   stg_stripe_payments_stitch_balance_transactions_table: balance_transactions
@@ -181,6 +196,7 @@ vars:
   stg_stripe_payments_stitch_payout_transactions_table: payout_transactions
   stg_stripe_payments_stitch_payouts_table: payouts
   stg_stripe_payments_stitch_charges_table: charges
+
   stg_xero_accounting_id-prefix: xero-
   stg_xero_accounting_etl: stitch
   stg_xero_accounting_stitch_schema: xero
@@ -192,11 +208,13 @@ vars:
   stg_xero_accounting_stitch_currencies_table: currencies
   stg_xero_accounting_stitch_expense_claims_table: expense_claims
   stg_xero_accounting_stitch_invoices_table: invoices
+
   stg_enrichment_id-prefix: clearbit-
   stg_enrichment_clearbit_schema: enrichment
   stg_enrichment_clearbit_contacts_table: contacts_companies
   stg_enrichment_clearbit_companies_table: contacts_companies
   stg_enrichment_geolite_city_table: company_website.geolite_city_bq_b2b
+
   stg_stripe_subscriptions_id-prefix: stripe-
   stg_stripe_subscriptions_etl: segment
   stg_stripe_subscriptions_segment_schema: stripe
@@ -214,10 +232,12 @@ vars:
   stg_stripe_subscriptions_segment_events_table: events
   stg_stripe_subscriptions_segment_payout_transactions_table: payout_transactions
   stg_stripe_subscriptions_segment_payouts_table: payouts
+
   web_sessionization_trailing_window: 3
   web_inactivity_cutoff: 30 * 60
+  attribution_create_account_event_type: account_opened
+  attribution_conversion_event_type: subscribed
+  attribution_topup_event_type: account_credited
+
   enable_companies_merge_file: true
   enable_ip_geo_enrichment: true
-
-
-
