more hubspot email

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -151,6 +151,7 @@ vars:
   stg_hubspot_crm_stitch_pipeline_stages_table: pipeline_stages
   stg_hubspot_crm_stitch_deal_pipelines_table: deal_pipelines
   stg_hubspot_crm_stitch_engagements_table: engagements
+  stg_hubspot_crm_stitch_campaigns_table: campaigns
   stg_hubspot_crm_fivetran_company_table: company
   stg_hubspot_crm_fivetran_contact_table: contact
   stg_hubspot_crm_fivetran_deal_table: deal
@@ -160,6 +161,7 @@ vars:
   stg_hubspot_crm_fivetran_property_history_table: property_history
   stg_hubspot_crm_fivetran_deal_company_table: deal_company
   stg_hubspot_crm_fivetran_engagements_table: engagements
+  stg_hubspot_crm_fivetran_campaigns_table: email_campaigns
 
   stg_intercom_messaging_id-prefix: intercom-
   stg_intercom_messaging_etl: stitch
