--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -81,35 +81,41 @@ vars:
 
   stg_asana_projects_id-prefix: asana-
   stg_asana_projects_etl: stitch
+  stg_asana_projects_stitch_database: ra-development
   stg_asana_projects_stitch_schema: stitch_asana
   stg_asana_projects_staff_email_domain: rittmananalytics.com
-  stg_asana_projects_stitch_workspaces_table: workspaces
-  stg_asana_projects_stitch_projects_table: projects
-  stg_asana_projects_stitch_tasks_table: tasks
-  stg_asana_projects_stitch_users_table: users
+  stg_asana_projects_stitch_workspaces_table: "{{ source('stitch_asana_projects', 'workspaces') }}"
+  stg_asana_projects_stitch_projects_table: "{{ source('stitch_asana_projects', 'projects') }}"
+  stg_asana_projects_stitch_tasks_table: "{{ source('stitch_asana_projects', 'tasks') }}"
+  stg_asana_projects_stitch_users_table: "{{ source('stitch_asana_projects', 'users') }}"
 
   stg_looker_usage_stats_id-prefix: looker-
+  stg_looker_usage_database: ra-development
   stg_looker_usage_schema: fivetran_email
   stg_looker_usage_stats_table: usage_stats
 
   stg_facebook_ads_id-prefix: fbads-
   stg_facebook_ads_etl: segment
+  stg_facebook_ads_stitch_database: ra-development
   stg_facebook_ads_stitch_schema: stitch_facebook_ads
-  stg_facebook_ads_stitch_ad_performance_table: insights
-  stg_facebook_ads_stitch_ad_groups_table: ad_adsets
-  stg_facebook_ads_stitch_ads_table: ads
-  stg_facebook_ads_stitch_campaigns_table: campaigns
+  stg_facebook_ads_stitch_ad_performance_table: "{{ source('stitch_facebook_ads', 'insights') }}"
+  stg_facebook_ads_stitch_ad_groups_table: "{{ source('stitch_facebook_ads', 'ad_adsets') }}"
+  stg_facebook_ads_stitch_ads_table: "{{ source('stitch_facebook_ads', 'ads') }}"
+  stg_facebook_ads_stitch_campaigns_table: "{{ source('stitch_facebook_ads', 'campaigns') }}"
+  stg_facebook_ads_segment_database: ra-development
   stg_facebook_ads_segment_schema: facebook_ads
-  stg_facebook_ads_segment_ad_performance_table: insights
-  stg_facebook_ads_segment_ad_groups_table: ad_sets
-  stg_facebook_ads_segment_ads_table: ads
-  stg_facebook_ads_segment_campaigns_table: campaigns
+  stg_facebook_ads_segment_ad_performance_table: "{{ source('segment_facebook_ads', 'insights') }}"
+  stg_facebook_ads_segment_ad_groups_table: "{{ source('stitch_facebook_ads', 'ad_sets') }}"
+  stg_facebook_ads_segment_ads_table: "{{ source('segment_facebook_ads', 'ads') }}"
+  stg_facebook_ads_segment_campaigns_table: "{{ source('segment_facebook_ads', 'campaigns') }}"
 
   stg_google_ads_id-prefix: gads-
   stg_google_ads_etl: stitch
+  stg_google_ads_stitch_database: ra-development
   stg_google_ads_stitch_schema: stitch_google_ads
   stg_google_ads_stitch_campaign_performance_table: CAMPAIGN_PERFORMANCE_REPORT
   stg_google_ads_stitch_campaigns_table: campaigns
+  stg_google_ads_segment_database: ra-development
   stg_google_ads_segment_schema: google_ads
   stg_google_ads_segment_campaign_performance_table: campaign_performance_reports
   stg_google_ads_segment_ad_performance_table: ad_performance_reports
@@ -118,40 +124,54 @@ vars:
   stg_google_ads_segment_campaigns_table: campaigns
   ads_campaigns_only: true
 
+  stg_segment_events_id-prefix: segment-
+  stg_segment_events_etl: segment
+  stg_segment_events_segment_database: ra-development
+  stg_segment_events_segment_schema: company_website
+  stg_segment_events_segment_tracks_table: "{{ source('segment', 'tracks') }}"
+  stg_segment_events_segment_pages_table: "{{ source('segment', 'pages') }}"
+  stg_segment_events_segment_users_table: "{{ source('segment', 'users') }}"
+  stg_segment_events_site: rittmananalytics.com
+  enable_event_type_mapping: true
 
   stg_baremetrics_analytics_id-prefix: baremetrics-
+  stg_baremetrics_analytics_etl: ra-development
   stg_baremetrics_analytics_etl: segment
   stg_baremetrics_analytics_segment_schema: baremetrics
   stg_baremetrics_analytics_segment_plan_breakdown_table: plan_breakdown
 
   stg_harvest_projects_id-prefix: harvest-
   stg_harvest_projects_etl: stitch
+  stg_harvest_projects_stitch_database: ra-development
   stg_harvest_projects_stitch_schema: rittman_analytics
   stg_harvest_projects_staff_email_domain: rittmananalytics.com
-  stg_harvest_projects_stitch_clients_table: clients
-  stg_harvest_projects_stitch_contacts_table: contacts
-  stg_harvest_projects_stitch_invoices_table: invoices
-  stg_harvest_projects_stitch_invoice_line_items_table: invoice_line_items
-  stg_harvest_projects_stitch_projects_table: projects
-  stg_harvest_projects_stitch_tasks_table: tasks
-  stg_harvest_projects_stitch_project_tasks_table: project_tasks
-  stg_harvest_projects_stitch_time_entries_table: time_entries
-  stg_harvest_projects_stitch_users_table: users
-  stg_harvest_projects_stitch_user_projects_table: user_projects
-  stg_harvest_projects_stitch_user_project_tasks_table: user_project_tasks
-  stg_harvest_projects_stitch_expenses_table: expenses
+  stg_harvest_projects_stitch_companies_table: "{{ source('stitch_harvest_projects', 'companies') }}"
+  stg_harvest_projects_stitch_contacts_table: "{{ source('stitch_harvest_projects', 'contacts') }}"
+  stg_harvest_projects_stitch_invoices_table: "{{ source('stitch_harvest_projects', 'invoices') }}"
+  stg_harvest_projects_stitch_invoice_line_items_table: "{{ source('stitch_harvest_projects', 'invoice_line_items') }}"
+  stg_harvest_projects_stitch_projects_table: "{{ source('stitch_harvest_projects', 'projects') }}"
+  stg_harvest_projects_stitch_tasks_table: "{{ source('stitch_harvest_projects', 'tasks') }}"
+  stg_harvest_projects_stitch_project_tasks_table: "{{ source('stitch_harvest_projects', 'project_tasks') }}"
+  stg_harvest_projects_stitch_timesheets_table: "{{ source('stitch_harvest_projects', 'timesheets') }}"
+  stg_harvest_projects_stitch_users_table: "{{ source('stitch_harvest_projects', 'users') }}"
+  stg_harvest_projects_stitch_user_projects_table: "{{ source('stitch_harvest_projects', 'user_projects') }}"
+  stg_harvest_projects_stitch_user_project_tasks_table: "{{ source('stitch_harvest_projects', 'user_project_tasks') }}"
+  stg_harvest_projects_stitch_expenses_table: "{{ source('stitch_harvest_projects', 'expenses') }}"
 
   stg_hubspot_crm_id-prefix: hubspot-
+  stg_hubspot_crm_stitch_database: ra-development
   stg_hubspot_crm_stitch_schema: stitch_hubspot
+  stg_hubspot_crm_fivetran_database: ra-development
   stg_hubspot_crm_fivetran_schema: fivetran_hubspot_euwest2
   stg_hubspot_crm_etl: stitch
-  stg_hubspot_crm_stitch_companies_table: companies
-  stg_hubspot_crm_stitch_contacts_table: contacts
-  stg_hubspot_crm_stitch_deals_table: deals
-  stg_hubspot_crm_stitch_owners_table: owners
-  stg_hubspot_crm_stitch_pipeline_stages_table: pipeline_stages
-  stg_hubspot_crm_stitch_deal_pipelines_table: deal_pipelines
-  stg_hubspot_crm_stitch_engagements_table: engagements
+  stg_hubspot_crm_stitch_companies_table: "{{ source('stitch_hubspot_crm', 'companies') }}"
+  stg_hubspot_crm_stitch_contacts_table: "{{ source('stitch_hubspot_crm', 'contacts') }}"
+  stg_hubspot_crm_stitch_deals_table: "{{ source('stitch_hubspot_crm', 'deals') }}"
+  stg_hubspot_crm_stitch_owners_table: "{{ source('stitch_hubspot_crm', 'owners') }}"
+  stg_hubspot_crm_stitch_pipeline_stages_table: "{{ source('stitch_hubspot_crm', 'pipeline_stages') }}"
+  stg_hubspot_crm_stitch_deal_pipelines_table: "{{ source('stitch_hubspot_crm', 'deal_pipelines') }}"
+  stg_hubspot_crm_stitch_engagements_table: "{{ source('stitch_hubspot_crm', 'engagements') }}"
+
   stg_hubspot_crm_fivetran_company_table: company
   stg_hubspot_crm_fivetran_contact_table: contact
   stg_hubspot_crm_fivetran_deal_table: deal
@@ -165,11 +185,13 @@ vars:
   stg_hubspot_email_stitch_email_events_table: email_events
   stg_hubspot_email_stitch_campaigns_table: campaigns
   stg_hubspot_email_id-prefix: hubspot-
+  stg_hubspot_email_stitch_database: ra-development
   stg_hubspot_email_stitch_schema: stitch_hubspot
   stg_hubspot_email_etl: stitch
 
   stg_intercom_messaging_id-prefix: intercom-
   stg_intercom_messaging_etl: stitch
+  stg_intercom_messaging_stitch_database: ra-development
   stg_intercom_messaging_stitch_schema: stitch_intercom
   stg_intercom_messaging_stitch_contacts_table: contacts
   stg_intercom_messaging_stitch_conversations_table: conversations
@@ -177,6 +199,7 @@ vars:
 
   stg_jira_projects_id-prefix: jira-
   stg_jira_projects_etl: stitch
+  stg_jira_projects_stitch_database: stitch_jira
   stg_jira_projects_stitch_schema: stitch_jira
   stg_jira_projects_staff_email_domain: rittmananalytics.com
   stg_jira_projects_stitch_projects_table: projects
@@ -188,6 +211,7 @@ vars:
 
   stg_mailchimp_email_id-prefix: mailchimp-
   stg_mailchimp_email_etl: stitch
+  stg_mailchimp_email_stitch_database: ra-development
   stg_mailchimp_email_stitch_schema: stitch_mailchimp
   stg_mailchimp_email_stitch_list_members_table: list_members
   stg_mailchimp_email_stitch_reports_email_activity_table: reports_email_activity
@@ -195,6 +219,8 @@ vars:
   stg_mailchimp_email_stitch_campaigns_table: campaigns
 
   stg_mixpanel_events_id-prefix: mixpanel-
+  stg_mixpanel_events_stitch_database: ra-development
+  stg_mixpanel_events_fivetran_database: ra-development
   stg_mixpanel_events_stitch_schema: mixpanel_stitch
   stg_mixpanel_events_fivetran_schema: fivetran_mixpanel
   stg_mixpanel_events_etl: fivetran
@@ -203,16 +229,10 @@ vars:
   stg_mixpanel_events_site: rittmananalytics.com
 
 
-  stg_segment_events_id-prefix: segment-
-  stg_segment_events_etl: segment
-  stg_segment_events_segment_schema: company_website
-  stg_segment_events_segment_tracks_table: tracks
-  stg_segment_events_segment_pages_table: pages
-  stg_segment_events_site: rittmananalytics.com
-  enable_event_type_mapping: true
 
   stg_stripe_payments_id-prefix: stripe-
   stg_stripe_payments_etl: stitch
+  stg_stripe_payments_stitch_database: ra-development
   stg_stripe_payments_stitch_schema: stitch_stripe
   stg_stripe_payments_stitch_balance_transactions_table: balance_transactions
   stg_stripe_payments_stitch_charges_table: charges
@@ -223,6 +243,7 @@ vars:
 
   stg_xero_accounting_id-prefix: xero-
   stg_xero_accounting_etl: stitch
+  stg_xero_accounting_stitch_database: ra-development
   stg_xero_accounting_stitch_schema: xero
   stg_xero_accounting_stitch_accounts_table: accounts
   stg_xero_accounting_stitch_payments_table: payments
@@ -241,6 +262,7 @@ vars:
 
   stg_stripe_subscriptions_id-prefix: stripe-
   stg_stripe_subscriptions_etl: segment
+  stg_stripe_subscriptions_segment_database: ra-development
   stg_stripe_subscriptions_segment_schema: stripe
   stg_stripe_subscriptions_segment_customers_table: customers
   stg_stripe_subscriptions_segment_accounts_table: accounts
