--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -79,6 +79,15 @@ vars:
   enable_product_warehouse:            true
   enable_subscriptions_warehouse:      false
 
+  crm_warehouse_company_sources: ['hubspot_crm','harvest_projects','xero_accounting','stripe_payments','asana_projects','jira_projects','looker_usage']
+  crm_warehouse_contact_sources: ['hubspot_crm','harvest_projects','xero_accounting','mailchimp_email','asana_projects','jira_projects','looker_usage']
+  marketing_warehouse_ad_campaigns_sources: ['google_ads','facebook_ads','mailchimp_email','hubspot_email']
+  marketing_warehouse_ad_campaign_performance_sources: ['google_ads','mailchimp_email','hubspot_email']
+  marketing_warehouse_ad_performance_sources: ['facebook_ads']
+  marketing_warehouse_ad_groups_sources: []
+  marketing_warehouse_ads_sources: []
+
+
   stg_asana_projects_id-prefix: asana-
   stg_asana_projects_etl: stitch
   stg_asana_projects_stitch_database: ra-development
@@ -113,15 +122,15 @@ vars:
   stg_google_ads_etl: stitch
   stg_google_ads_stitch_database: ra-development
   stg_google_ads_stitch_schema: stitch_google_ads
-  stg_google_ads_stitch_campaign_performance_table: CAMPAIGN_PERFORMANCE_REPORT
-  stg_google_ads_stitch_campaigns_table: campaigns
+  stg_google_ads_stitch_campaign_performance_table: "{{ source('stitch_google_ads', 'CAMPAIGN_PERFORMANCE_REPORT') }}"
+  stg_google_ads_stitch_campaigns_table: "{{ source('stitch_google_ads', 'campaigns') }}"
   stg_google_ads_segment_database: ra-development
   stg_google_ads_segment_schema: google_ads
-  stg_google_ads_segment_campaign_performance_table: campaign_performance_reports
-  stg_google_ads_segment_ad_performance_table: ad_performance_reports
-  stg_google_ads_segment_ad_groups_table: ad_groups
-  stg_google_ads_segment_ads_table: ads
-  stg_google_ads_segment_campaigns_table: campaigns
+  stg_google_ads_segment_campaign_performance_table: "{{ source('segment_google_ads', 'campaign_performance_reports') }}"
+  stg_google_ads_segment_ad_performance_table: "{{ source('segment_google_ads', 'ad_performance_reports') }}"
+  stg_google_ads_segment_ad_groups_table: "{{ source('segment_google_ads', 'ad_groups') }}"
+  stg_google_ads_segment_ads_table: "{{ source('segment_google_ads', 'ads') }}"
+  stg_google_ads_segment_campaigns_table: "{{ source('segment_google_ads', 'campaigns') }}"
   ads_campaigns_only: true
 
   stg_segment_events_id-prefix: segment-
@@ -172,22 +181,23 @@ vars:
   stg_hubspot_crm_stitch_deal_pipelines_table: "{{ source('stitch_hubspot_crm', 'deal_pipelines') }}"
   stg_hubspot_crm_stitch_engagements_table: "{{ source('stitch_hubspot_crm', 'engagements') }}"
 
-  stg_hubspot_crm_fivetran_company_table: company
-  stg_hubspot_crm_fivetran_contact_table: contact
-  stg_hubspot_crm_fivetran_deal_table: deal
-  stg_hubspot_crm_fivetran_owner_table: owner
-  stg_hubspot_crm_fivetran_pipeline_stage_table: pipeline_stage
-  stg_hubspot_crm_fivetran_pipeline_table: pipeline
-  stg_hubspot_crm_fivetran_property_history_table: property_history
-  stg_hubspot_crm_fivetran_deal_company_table: deal_company
-  stg_hubspot_crm_fivetran_engagements_table: engagements
+  stg_hubspot_crm_fivetran_company_table: "{{ source('fivetran_hubspot_crm', 'engagements') }}"
+  stg_hubspot_crm_fivetran_contact_table: "{{ source('fivetran_hubspot_crm', 'contacts') }}"
+  stg_hubspot_crm_fivetran_deal_table: "{{ source('fivetran_hubspot_crm', 'deals') }}"
+  stg_hubspot_crm_fivetran_owner_table: "{{ source('fivetran_hubspot_crm', 'owners') }}"
+  stg_hubspot_crm_fivetran_pipeline_stage_table: "{{ source('fivetran_hubspot_crm', 'pipeline_stages') }}"
+  stg_hubspot_crm_fivetran_pipeline_table: "{{ source('fivetran_hubspot_crm', 'deal_pipelines') }}"
+  stg_hubspot_crm_fivetran_property_history_table: "{{ source('fivetran_hubspot_crm', 'property_history') }}"
+  stg_hubspot_crm_fivetran_deal_company_table: "{{ source('fivetran_hubspot_crm', 'deal_company') }}"
+  stg_hubspot_crm_fivetran_engagements_table: "{{ source('fivetran_hubspot_crm', 'engagements') }}"
 
-  stg_hubspot_email_stitch_email_events_table: email_events
-  stg_hubspot_email_stitch_campaigns_table: campaigns
+
   stg_hubspot_email_id-prefix: hubspot-
   stg_hubspot_email_stitch_database: ra-development
   stg_hubspot_email_stitch_schema: stitch_hubspot
   stg_hubspot_email_etl: stitch
+  stg_hubspot_email_stitch_email_events_table: "{{ source('stitch_hubspot_email', 'email_events') }}"
+  stg_hubspot_email_stitch_campaigns_table: "{{ source('stitch_hubspot_email', 'campaigns') }}"
 
   stg_intercom_messaging_id-prefix: intercom-
   stg_intercom_messaging_etl: stitch
@@ -199,24 +209,24 @@ vars:
 
   stg_jira_projects_id-prefix: jira-
   stg_jira_projects_etl: stitch
-  stg_jira_projects_stitch_database: stitch_jira
+  stg_jira_projects_stitch_database: ra-development
   stg_jira_projects_stitch_schema: stitch_jira
   stg_jira_projects_staff_email_domain: rittmananalytics.com
-  stg_jira_projects_stitch_projects_table: projects
-  stg_jira_projects_stitch_project_types_table: project_types
-  stg_jira_projects_stitch_project_categories_table: project_categories
-  stg_jira_projects_stitch_issues_table: issues
-  stg_jira_projects_stitch_users_table: users
+  stg_jira_projects_stitch_projects_table: "{{ source('stitch_jira_projects', 'projects') }}"
+  stg_jira_projects_stitch_project_types_table: "{{ source('stitch_jira_projects', 'project_types') }}"
+  stg_jira_projects_stitch_project_categories_table: "{{ source('stitch_jira_projects', 'project_categories') }}"
+  stg_jira_projects_stitch_issues_table: "{{ source('stitch_jira_projects', 'issues') }}"
+  stg_jira_projects_stitch_users_table: "{{ source('stitch_jira_projects', 'users') }}"
   stg_jira_projects_jira_url: rittmananalytics.atlassian.net/jira
 
   stg_mailchimp_email_id-prefix: mailchimp-
   stg_mailchimp_email_etl: stitch
   stg_mailchimp_email_stitch_database: ra-development
   stg_mailchimp_email_stitch_schema: stitch_mailchimp
-  stg_mailchimp_email_stitch_list_members_table: list_members
-  stg_mailchimp_email_stitch_reports_email_activity_table: reports_email_activity
-  stg_mailchimp_email_stitch_lists_table: lists
-  stg_mailchimp_email_stitch_campaigns_table: campaigns
+  stg_mailchimp_email_stitch_list_members_table: "{{ source('stitch_mailchimp_email', 'list_members') }}"
+  stg_mailchimp_email_stitch_reports_email_activity_table: "{{ source('stitch_mailchimp_email', 'reports_email_activity') }}"
+  stg_mailchimp_email_stitch_lists_table: "{{ source('stitch_mailchimp_email', 'lists') }}"
+  stg_mailchimp_email_stitch_campaigns_table: "{{ source('stitch_mailchimp_email', 'campaigns') }}"
 
   stg_mixpanel_events_id-prefix: mixpanel-
   stg_mixpanel_events_stitch_database: ra-development
@@ -224,35 +234,26 @@ vars:
   stg_mixpanel_events_stitch_schema: mixpanel_stitch
   stg_mixpanel_events_fivetran_schema: fivetran_mixpanel
   stg_mixpanel_events_etl: fivetran
-  stg_mixpanel_events_fivetran_event_table: event
-  stg_mixpanel_events_stitch_export_table: export
+  stg_mixpanel_events_fivetran_event_table: "{{ source('fivetran_mixpanel_events', 'event') }}"
+  stg_mixpanel_events_stitch_event_table: "{{ source('stitch_mixpanel_events', 'event') }}"
   stg_mixpanel_events_site: rittmananalytics.com
 
 
 
-  stg_stripe_payments_id-prefix: stripe-
-  stg_stripe_payments_etl: stitch
-  stg_stripe_payments_stitch_database: ra-development
-  stg_stripe_payments_stitch_schema: stitch_stripe
-  stg_stripe_payments_stitch_balance_transactions_table: balance_transactions
-  stg_stripe_payments_stitch_charges_table: charges
-  stg_stripe_payments_stitch_events_table: events
-  stg_stripe_payments_stitch_payout_transactions_table: payout_transactions
-  stg_stripe_payments_stitch_payouts_table: payouts
-  stg_stripe_payments_stitch_charges_table: charges
+
 
   stg_xero_accounting_id-prefix: xero-
   stg_xero_accounting_etl: stitch
   stg_xero_accounting_stitch_database: ra-development
   stg_xero_accounting_stitch_schema: xero
-  stg_xero_accounting_stitch_accounts_table: accounts
-  stg_xero_accounting_stitch_payments_table: payments
-  stg_xero_accounting_stitch_categories_table: tracking_categories
-  stg_xero_accounting_stitch_bank_transactions_table: bank_transactions
-  stg_xero_accounting_stitch_contacts_table: contacts
-  stg_xero_accounting_stitch_currencies_table: currencies
-  stg_xero_accounting_stitch_expense_claims_table: expense_claims
-  stg_xero_accounting_stitch_invoices_table: invoices
+  stg_xero_accounting_stitch_accounts_table: "{{ source('stitch_xero_accounting', 'accounts') }}"
+  stg_xero_accounting_stitch_payments_table: "{{ source('stitch_xero_accounting', 'payments') }}"
+  stg_xero_accounting_stitch_categories_table: "{{ source('stitch_xero_accounting', 'tracking_categories') }}"
+  stg_xero_accounting_stitch_bank_transactions_table: "{{ source('stitch_xero_accounting', 'bank_transactions') }}"
+  stg_xero_accounting_stitch_contacts_table: "{{ source('stitch_xero_accounting', 'contacts') }}"
+  stg_xero_accounting_stitch_currencies_table: "{{ source('stitch_xero_accounting', 'currencies') }}"
+  stg_xero_accounting_stitch_expense_claims_table: "{{ source('stitch_xero_accounting', 'expense_claims') }}"
+  stg_xero_accounting_stitch_invoices_table: "{{ source('stitch_xero_accounting', 'invoices') }}"
 
   stg_enrichment_id-prefix: clearbit-
   stg_enrichment_clearbit_schema: enrichment
@@ -260,24 +261,35 @@ vars:
   stg_enrichment_clearbit_companies_table: contacts_companies
   stg_enrichment_geolite_city_table: company_website.geolite_city_bq_b2b
 
+  stg_stripe_payments_id-prefix: stripe-
+  stg_stripe_payments_etl: stitch
+  stg_stripe_payments_stitch_database: ra-development
+  stg_stripe_payments_stitch_schema: stitch_stripe
+  stg_stripe_payments_stitch_balance_transactions_table: "{{ source('stitch_stripe_payments', 'balance_transactions') }}"
+  stg_stripe_payments_stitch_charges_table: "{{ source('stitch_stripe_payments', 'charges') }}"
+  stg_stripe_payments_stitch_events_table: "{{ source('stitch_stripe_payments', 'events') }}"
+  stg_stripe_payments_stitch_payout_transactions_table: "{{ source('stitch_stripe_payments', 'payout_transactions') }}"
+  stg_stripe_payments_stitch_payouts_table: "{{ source('stitch_stripe_payments', 'payouts') }}"
+  stg_stripe_payments_stitch_charges_table: "{{ source('stitch_stripe_payments', 'charges') }}"
+
   stg_stripe_subscriptions_id-prefix: stripe-
   stg_stripe_subscriptions_etl: segment
   stg_stripe_subscriptions_segment_database: ra-development
   stg_stripe_subscriptions_segment_schema: stripe
-  stg_stripe_subscriptions_segment_customers_table: customers
-  stg_stripe_subscriptions_segment_accounts_table: accounts
-  stg_stripe_subscriptions_segment_cards_table: cards
-  stg_stripe_subscriptions_segment_coupons_table: coupons
-  stg_stripe_subscriptions_segment_discounts_table: discounts
-  stg_stripe_subscriptions_segment_invoices_table: invoices
-  stg_stripe_subscriptions_segment_plans_table: plans
-  stg_stripe_subscriptions_segment_products_table: products
-  stg_stripe_subscriptions_segment_subscriptions_table: subscriptions
-  stg_stripe_subscriptions_segment_balance_transactions_table: balance_transactions
-  stg_stripe_subscriptions_segment_charges_table: charges
-  stg_stripe_subscriptions_segment_events_table: events
-  stg_stripe_subscriptions_segment_payout_transactions_table: payout_transactions
-  stg_stripe_subscriptions_segment_payouts_table: payouts
+  stg_stripe_subscriptions_segment_customers_table: "{{ source('segment_stripe_subscriptions', 'customers') }}"
+  stg_stripe_subscriptions_segment_accounts_table: "{{ source('segment_stripe_subscriptions', 'accounts') }}"
+  stg_stripe_subscriptions_segment_cards_table: "{{ source('segment_stripe_subscriptions', 'cards') }}"
+  stg_stripe_subscriptions_segment_coupons_table: "{{ source('segment_stripe_subscriptions', 'coupons') }}"
+  stg_stripe_subscriptions_segment_discounts_table: "{{ source('segment_stripe_subscriptions', 'discounts') }}"
+  stg_stripe_subscriptions_segment_invoices_table: "{{ source('segment_stripe_subscriptions', 'invoices') }}"
+  stg_stripe_subscriptions_segment_plans_table: "{{ source('segment_stripe_subscriptions', 'plans') }}"
+  stg_stripe_subscriptions_segment_products_table: "{{ source('segment_stripe_subscriptions', 'products') }}"
+  stg_stripe_subscriptions_segment_subscriptions_table: "{{ source('segment_stripe_subscriptions', 'subscriptions') }}"
+  stg_stripe_subscriptions_segment_balance_transactions_table: "{{ source('segment_stripe_subscriptions', 'balance_transactions') }}"
+  stg_stripe_subscriptions_segment_charges_table: "{{ source('segment_stripe_subscriptions', 'charges') }}"
+  stg_stripe_subscriptions_segment_events_table: "{{ source('segment_stripe_subscriptions', 'eventsplans') }}"
+  stg_stripe_subscriptions_segment_payout_transactions_table: "{{ source('segment_stripe_subscriptions', 'payout_transactions') }}"
+  stg_stripe_subscriptions_segment_payouts_table: "{{ source('segment_stripe_subscriptions', 'payouts') }}"
 
   web_sessionization_trailing_window: 3
   web_inactivity_cutoff: 30 * 60
