--- a/models/sources/stg_facebook_ads/schema/sources.yml
+++ b/models/sources/stg_facebook_ads/schema/sources.yml
@@ -12,7 +12,9 @@ sources:
 
     tables:
       - name: insights
+      - name: ads_insights
       - name: ad_adsets
+      - name: adsets
       - name: ads
       - name: campaigns
 
