--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -48,43 +48,43 @@ seeds:
     schema: seed
 
 vars:
-  crm_warehouse_company_sources: ['hubspot_crm','harvest_projects','xero_accounting','stripe_payments','asana_projects','jira_projects','looker_usage']
-  crm_warehouse_contact_sources: ['hubspot_crm','harvest_projects','xero_accounting','mailchimp_email','asana_projects','jira_projects','looker_usage']
-  crm_warehouse_conversations_sources: ['hubspot_crm','intercom_messaging']
-  marketing_warehouse_ad_campaign_sources: ['google_ads','facebook_ads','mailchimp_email','hubspot_email']
-  marketing_warehouse_ad_campaign_performance_sources: ['google_ads','mailchimp_email','hubspot_email']
-  marketing_warehouse_ad_performance_sources: ['facebook_ads']
+  crm_warehouse_company_sources: []
+  crm_warehouse_contact_sources: []
+  crm_warehouse_conversations_sources: []
+  marketing_warehouse_ad_campaign_sources: []
+  marketing_warehouse_ad_campaign_performance_sources: []
+  marketing_warehouse_ad_performance_sources: []
   marketing_warehouse_ad_group_sources: []
   marketing_warehouse_ad_sources: []
-  marketing_warehouse_email_event_sources: ['hubspot_email','mailchimp_email']
-  marketing_warehouse_email_list_sources: ['mailchimp_email']
-  marketing_warehouse_deal_sources: ['hubspot_crm']
-  projects_warehouse_delivery_sources: ['asana_projects','jira_projects']
-  projects_warehouse_timesheet_sources: ['harvest_projects']
-  finance_warehouse_invoice_sources: ['xero_accounting','harvest_projects']
-  finance_warehouse_transaction_sources: ['xero_accounting','stripe_payments']
-  finance_warehouse_payment_sources: ['xero_accounting']
-  product_warehouse_event_sources: ['segment_events_track','segment_events_page','mixpanel_events']
+  marketing_warehouse_email_event_sources: []
+  marketing_warehouse_email_list_sources: []
+  marketing_warehouse_deal_sources: []
+  projects_warehouse_delivery_sources: []
+  projects_warehouse_timesheet_sources: []
+  finance_warehouse_invoice_sources: []
+  finance_warehouse_transaction_sources: [']
+  finance_warehouse_payment_sources: []
+  product_warehouse_event_sources: []
   subscriptions_warehouse_sources: []
 
   stg_asana_projects_id-prefix: asana-
   stg_asana_projects_etl: stitch
-  stg_asana_projects_stitch_database: ra-development
-  stg_asana_projects_stitch_schema: stitch_asana
-  stg_asana_projects_staff_email_domain: rittmananalytics.com
+  stg_asana_projects_stitch_database:
+  stg_asana_projects_stitch_schema:
+  stg_asana_projects_staff_email_domain: .com
   stg_asana_projects_stitch_workspaces_table: "{{ source('stitch_asana_projects', 'workspaces') }}"
   stg_asana_projects_stitch_projects_table: "{{ source('stitch_asana_projects', 'projects') }}"
   stg_asana_projects_stitch_tasks_table: "{{ source('stitch_asana_projects', 'tasks') }}"
   stg_asana_projects_stitch_users_table: "{{ source('stitch_asana_projects', 'users') }}"
 
   stg_looker_usage_stats_id-prefix: looker-
-  stg_looker_usage_database: ra-development
-  stg_looker_usage_schema: fivetran_email
-  stg_looker_usage_stats_table: usage_stats
+  stg_looker_usage_database:
+  stg_looker_usage_schema:
+  stg_looker_usage_stats_table:
 
   stg_facebook_ads_id-prefix: fbads-
   stg_facebook_ads_etl: segment
-  stg_facebook_ads_stitch_database: ra-development
+  stg_facebook_ads_stitch_database:
   stg_facebook_ads_stitch_schema: stitch_facebook_ads
   stg_facebook_ads_stitch_ad_performance_table: "{{ source('stitch_facebook_ads', 'insights') }}"
   stg_facebook_ads_stitch_ad_performance_table_snowflake: "{{ source('stitch_facebook_ads', 'ads_insights') }}"
@@ -92,7 +92,7 @@ vars:
   stg_facebook_ads_stitch_ad_groups_table_snowflake: "{{ source('stitch_facebook_ads', 'adsets') }}"
   stg_facebook_ads_stitch_ads_table: "{{ source('stitch_facebook_ads', 'ads') }}"
   stg_facebook_ads_stitch_campaigns_table: "{{ source('stitch_facebook_ads', 'campaigns') }}"
-  stg_facebook_ads_segment_database: ra-development
+  stg_facebook_ads_segment_database:
   stg_facebook_ads_segment_schema: facebook_ads
   stg_facebook_ads_segment_ad_performance_table: "{{ source('segment_facebook_ads', 'insights') }}"
   stg_facebook_ads_segment_ad_groups_table: "{{ source('stitch_facebook_ads', 'ad_adsets') }}"
@@ -101,11 +101,11 @@ vars:
 
   stg_google_ads_id-prefix: gads-
   stg_google_ads_etl: stitch
-  stg_google_ads_stitch_database: ra-development
+  stg_google_ads_stitch_database:
   stg_google_ads_stitch_schema: stitch_google_ads
   stg_google_ads_stitch_campaign_performance_table: "{{ source('stitch_google_ads', 'CAMPAIGN_PERFORMANCE_REPORT') }}"
   stg_google_ads_stitch_campaigns_table: "{{ source('stitch_google_ads', 'campaigns') }}"
-  stg_google_ads_segment_database: ra-development
+  stg_google_ads_segment_database:
   stg_google_ads_segment_schema: google_ads
   stg_google_ads_segment_campaign_performance_table: "{{ source('segment_google_ads', 'campaign_performance_reports') }}"
   stg_google_ads_segment_ad_performance_table: "{{ source('segment_google_ads', 'ad_performance_reports') }}"
@@ -116,8 +116,8 @@ vars:
 
   stg_segment_events_id-prefix: segment-
   stg_segment_events_etl: segment
-  stg_segment_events_segment_database: ra-development
-  stg_segment_events_segment_schema: company_website
+  stg_segment_events_segment_database:
+  stg_segment_events_segment_schema:
   stg_segment_events_segment_tracks_table: "{{ source('segment', 'tracks') }}"
   stg_segment_events_segment_pages_table: "{{ source('segment', 'pages') }}"
   stg_segment_events_segment_users_table: "{{ source('segment', 'users') }}"
@@ -125,14 +125,14 @@ vars:
   enable_event_type_mapping: true
 
   stg_baremetrics_analytics_id-prefix: baremetrics-
-  stg_baremetrics_analytics_etl: ra-development
+  stg_baremetrics_analytics_etl:
   stg_baremetrics_analytics_etl: segment
   stg_baremetrics_analytics_segment_schema: baremetrics
   stg_baremetrics_analytics_segment_plan_breakdown_table: plan_breakdown
 
   stg_harvest_projects_id-prefix: harvest-
   stg_harvest_projects_etl: stitch
-  stg_harvest_projects_stitch_database: ra-development
+  stg_harvest_projects_stitch_database:
   stg_harvest_projects_stitch_schema: rittman_analytics
   stg_harvest_projects_staff_email_domain: rittmananalytics.com
   stg_harvest_projects_stitch_companies_table: "{{ source('stitch_harvest_projects', 'companies') }}"
@@ -149,9 +149,9 @@ vars:
   stg_harvest_projects_stitch_expenses_table: "{{ source('stitch_harvest_projects', 'expenses') }}"
 
   stg_hubspot_crm_id-prefix: hubspot-
-  stg_hubspot_crm_stitch_database: ra-development
+  stg_hubspot_crm_stitch_database:
   stg_hubspot_crm_stitch_schema: stitch_hubspot
-  stg_hubspot_crm_fivetran_database: ra-development
+  stg_hubspot_crm_fivetran_database:
   stg_hubspot_crm_fivetran_schema: fivetran_hubspot_euwest2
   stg_hubspot_crm_etl: stitch
   stg_hubspot_crm_stitch_companies_table: "{{ source('stitch_hubspot_crm', 'companies') }}"
@@ -174,7 +174,7 @@ vars:
 
 
   stg_hubspot_email_id-prefix: hubspot-
-  stg_hubspot_email_stitch_database: ra-development
+  stg_hubspot_email_stitch_database:
   stg_hubspot_email_stitch_schema: stitch_hubspot
   stg_hubspot_email_etl: stitch
   stg_hubspot_email_stitch_email_events_table: "{{ source('stitch_hubspot_email', 'email_events') }}"
@@ -182,7 +182,7 @@ vars:
 
   stg_intercom_messaging_id-prefix: intercom-
   stg_intercom_messaging_etl: stitch
-  stg_intercom_messaging_stitch_database: ra-development
+  stg_intercom_messaging_stitch_database:
   stg_intercom_messaging_stitch_schema: stitch_intercom
   stg_intercom_messaging_stitch_contacts_table: contacts
   stg_intercom_messaging_stitch_conversations_table: conversations
@@ -190,9 +190,9 @@ vars:
 
   stg_jira_projects_id-prefix: jira-
   stg_jira_projects_etl: stitch
-  stg_jira_projects_stitch_database: ra-development
+  stg_jira_projects_stitch_database:
   stg_jira_projects_stitch_schema: stitch_jira
-  stg_jira_projects_staff_email_domain: rittmananalytics.com
+  stg_jira_projects_staff_email_domain:
   stg_jira_projects_stitch_projects_table: "{{ source('stitch_jira_projects', 'projects') }}"
   stg_jira_projects_stitch_project_types_table: "{{ source('stitch_jira_projects', 'project_types') }}"
   stg_jira_projects_stitch_project_categories_table: "{{ source('stitch_jira_projects', 'project_categories') }}"
@@ -202,7 +202,7 @@ vars:
 
   stg_mailchimp_email_id-prefix: mailchimp-
   stg_mailchimp_email_etl: stitch
-  stg_mailchimp_email_stitch_database: ra-development
+  stg_mailchimp_email_stitch_database:
   stg_mailchimp_email_stitch_schema: stitch_mailchimp
   stg_mailchimp_email_stitch_list_members_table: "{{ source('stitch_mailchimp_email', 'list_members') }}"
   stg_mailchimp_email_stitch_reports_email_activity_table: "{{ source('stitch_mailchimp_email', 'reports_email_activity') }}"
@@ -210,8 +210,8 @@ vars:
   stg_mailchimp_email_stitch_campaigns_table: "{{ source('stitch_mailchimp_email', 'campaigns') }}"
 
   stg_mixpanel_events_id-prefix: mixpanel-
-  stg_mixpanel_events_stitch_database: ra-development
-  stg_mixpanel_events_fivetran_database: ra-development
+  stg_mixpanel_events_stitch_database:
+  stg_mixpanel_events_fivetran_database:
   stg_mixpanel_events_stitch_schema: mixpanel_stitch
   stg_mixpanel_events_fivetran_schema: fivetran_mixpanel
   stg_mixpanel_events_etl: fivetran
@@ -225,7 +225,7 @@ vars:
 
   stg_xero_accounting_id-prefix: xero-
   stg_xero_accounting_etl: stitch
-  stg_xero_accounting_stitch_database: ra-development
+  stg_xero_accounting_stitch_database:
   stg_xero_accounting_stitch_schema: xero
   stg_xero_accounting_stitch_accounts_table: "{{ source('stitch_xero_accounting', 'accounts') }}"
   stg_xero_accounting_stitch_payments_table: "{{ source('stitch_xero_accounting', 'payments') }}"
@@ -244,7 +244,7 @@ vars:
 
   stg_stripe_payments_id-prefix: stripe-
   stg_stripe_payments_etl: stitch
-  stg_stripe_payments_stitch_database: ra-development
+  stg_stripe_payments_stitch_database:
   stg_stripe_payments_stitch_schema: stitch_stripe
   stg_stripe_payments_stitch_balance_transactions_table: "{{ source('stitch_stripe_payments', 'balance_transactions') }}"
   stg_stripe_payments_stitch_charges_table: "{{ source('stitch_stripe_payments', 'charges') }}"
@@ -255,7 +255,7 @@ vars:
 
   stg_stripe_subscriptions_id-prefix: stripe-
   stg_stripe_subscriptions_etl: segment
-  stg_stripe_subscriptions_segment_database: ra-development
+  stg_stripe_subscriptions_segment_database: 
   stg_stripe_subscriptions_segment_schema: stripe
   stg_stripe_subscriptions_segment_customers_table: "{{ source('segment_stripe_subscriptions', 'customers') }}"
   stg_stripe_subscriptions_segment_accounts_table: "{{ source('segment_stripe_subscriptions', 'accounts') }}"
